--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
       </footer>
     </div>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/Estelle9">Estelle</a>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
+      Coded by <a href="https://github.com/Estelle9">Estelle</a>
+    <p>
   </div>
 </body>
 
